--- a/cricketWeb/web/resources/css/mycss.css
+++ b/cricketWeb/web/resources/css/mycss.css
@@ -11,5 +11,54 @@ and open the template in the editor.
 #hm{
     color:white;
     margin-right: auto;
+    margin:initial;
 }
+
+.progress{
+    height: 2.5rem;
+    padding-top: 10px;
+    width: 165px;
+    color:#545454;
+    
+    
+}
+
+.progress-bar{
+    background-color: #545454;
+}
+
+.incr{
+    width: 35px;
+    height: 38px;
+}
+
+.decr{
+    width: 35px;
+    height: 38px;
+}
+
+.edit{
+    height: 30px;
+    width: 30px;
+    padding-bottom: 6px;
+}
+
+.remove{
+    height: 30px;
+    width: 30px;
+    padding-bottom: 6px;
+}
+
+.copyright{
+    padding:148px 100px;
+    text-align:center;
+}
+
+.progress span {
+    position: absolute;
+    display: block;
+    width: 100%;
+    color: black;
+ }
+
 
