--- a/cricketWeb/web/resources/css/mycss.css
+++ b/cricketWeb/web/resources/css/mycss.css
@@ -82,13 +82,41 @@ and open the template in the editor.
 
 }
  
- .grow{
-     height: 300px;
-     width: 380px;
+ .grow {
+     height: 3rem;
+     width: auto;
  }
+ 
+ .imglogin {
+     display: inline-flex;
+ }    
+ 
+ #j_idt40 {
+     margin-left:100%;
+     }  
+ 
+ .textologin {
+     margin-top:10px;
+     font-weight: bold;
+     text-align: center;
+     width: 10rem;
+     } 
 
  .grow:hover{
      -webkit-transform: scale(1.3);
         -ms-transform: scale(1.3);
         transform: scale(1.3)
+ }
+ 
+ .bg-dark {
+     background: linear-gradient(28deg, rgba(122,150,252,1) 0%, rgba(104,232,253,1) 100%);
+ }
+     
+ .meubotao {
+     background: linear-gradient(28deg, rgba(122,150,252,1) 0%, rgba(104,232,253,1) 100%);
+     }
+     
+ .jumbotron {
+     background: linear-gradient(28deg, rgba(122,150,252,1) 0%, rgba(104,232,253,1) 100%);
+     color: #fff;
  }
