--- a/cricketWeb/web/resources/css/mycss.css
+++ b/cricketWeb/web/resources/css/mycss.css
@@ -121,6 +121,11 @@ and open the template in the editor.
      color: #fff;
      height: 10rem;
  }
+ 
+ .panelGrid-radio{
+     vertical-align: middle;
+ }
+ 
  /*======================================================================================*/
 
 /*//////////////////////////////////////////////////////////////////
